# oxideav-job

./: CHANGELOG.md  Cargo.toml  README.md
src/: executor.rs  lib.rs  pipeline.rs  schema.rs
tests/: pipelined_parity.rs  pix_convert.rs
