[package]
name = "oxideav-job"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-job"
authors = ["Mark Karpeles"]
description = "JSON-based transcode job graph for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-job"
keywords = ["multimedia", "transcoding", "pipeline", "job", "graph"]
categories = ["multimedia"]

[dependencies]
oxideav-core = "0.0"
oxideav-codec = "0.0"
oxideav-container = "0.0"
oxideav-source = "0.0"
oxideav-pipeline = "0.0"
oxideav-pixfmt = "0.0"
oxideav-audio-filter = { version = "0.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

[features]
default = ["audio_filter"]
audio_filter = ["dep:oxideav-audio-filter"]

[dev-dependencies]
oxideav-basic = "0.0"
